# SecondLoop

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  analysis_options.yaml  flutter_rust_bridge.yaml  pixi.toml  pubspec.yaml  slang.yaml
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: ask_scope.rs  attachments.rs  audio_transcribe.rs  content_enrichment.rs  content_extract.rs  core.rs  desktop_media.rs  media_annotation.rs  mod.rs  sync_progress.rs  tags.rs  topic_threads.rs
rust/src/api/audio_transcribe/: local_whisper_runtime.rs
rust/src/auth/: mod.rs
rust/src/content_extract/: docx.rs  mod.rs  pdf.rs
rust/src/crypto/: mod.rs
rust/src/db/: cloud_media_backup_tests.rs  content_extract_jobs_tests.rs  message_tag_autofill_tests.rs  mod.rs  semantic_parse_jobs_tests.rs
rust/src/db/parts/: 01_kv_and_oplog.rs  01_prelude.rs  02_migrate.rs  03_conversations_messages.rs  04_profiles_llm_usage.rs  05_embeddings_active.rs  06_attachment_reads_and_embeddings_processing.rs  07_messages_and_similarity.rs  08_attachment_metadata.rs  08_attachments_core.rs  09_attachment_jobs.rs  10_todos.rs  11_events.rs  12_media_annotation_config.rs  13_content_enrichment_kv.rs  14_content_extract_jobs.rs  15_todo_recurrence.rs  16_tags.rs  17_topic_threads.rs  18_tag_merge_feedback.rs  19_suggested_tags.rs  20_message_tag_autofill.rs
rust/src/desktop_media/: mod.rs  ocr.rs  ocr_model_config.rs  ocr_parallel.rs  ocr_pdf_render.rs  ocr_pdf_text.rs  ocr_tests.rs  pdf_compress.rs  pdf_page_image_decode.rs
rust/src/embedding/: brok.rs  cloud_gateway.rs  fastembed.rs  mod.rs
rust/src/geo/: mod.rs
rust/src/llm/: anthropic.rs  gateway.rs  gemini.rs  mod.rs  openai.rs  timeouts.rs
rust/src/media_annotation/: mod.rs
rust/src/rag/: mod.rs
rust/src/semantic_parse/: mod.rs
rust/src/sync/: localdir.rs  managed_vault.rs  mod.rs  webdav.rs
rust/src/sync/managed_vault/: admin.rs  attachments.rs  progress.rs
rust/src/sync/parts/: 01_prelude.rs  02_push.rs  03_pull.rs  04_apply_core.rs  06_apply_attachment_metadata.rs  (+2 more)
rust/src/vector/: mod.rs
rust/tests/: actions_roundtrip_and_sync.rs  actions_schema_smoke.rs  active_embeddings_dont_downgrade_on_fastembed_failure.rs  api_attachments.rs  api_core_smoke.rs  api_todo_activities.rs  ask_ai_agenda_includes_actions.rs  ask_ai_flow.rs  ask_ai_messages_are_non_memory.rs  ask_ai_prompt_includes_history.rs  ask_ai_prompt_language_matches_user.rs  ask_ai_prompt_time_window_filters_history.rs  ask_ai_rag_includes_todo_threads.rs  ask_ai_topk_zero_skips_embeddings.rs  ask_scope_query_scope_matrix.rs  attachment_annotations_migration.rs  attachment_exif_metadata_roundtrip.rs  attachment_metadata_sync_smoke.rs  attachment_place_display_name_fallback.rs  attachment_places_migration.rs  attachment_variants_migration.rs  attachment_variants_roundtrip.rs  attachments_list_and_read.rs  attachments_recent_list_smoke.rs  attachments_roundtrip.rs  audio_transcribe_auto_enqueue_smoke.rs  audio_transcribe_byok_profile_smoke.rs  audio_transcribe_byok_streaming_smoke.rs  auth_init_with_existing_key.rs  brok_embedder_url.rs  cloud_gateway_embedder_parsing.rs  cloud_media_backup_backfill.rs  cloud_media_backup_roundtrip.rs  cloud_media_backup_summary.rs  content_enrichment_kv_defaults.rs  crypto_roundtrip.rs  db_open_enables_wal.rs  db_smoke.rs  delete_todo_and_associated_messages_deletes_source_entry.rs  document_extract_smoke.rs  (+94 more)
(+766 files in other folders)
