[package]
name = "secondloop_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.38"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1.7-alpha.2"
uuid = { version = "1", features = ["v4"] }
zerocopy = { version = "0.8", features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
