[package]
name = "secondloop_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.38"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
flate2 = "1"
lopdf = { version = "0.34", default-features = false, features = ["nom_parser"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
quick-xml = "0.31"
sqlite-vec = "0.1.7-alpha.2"
uuid = { version = "1", features = ["v4"] }
zerocopy = { version = "0.8", features = ["alloc"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
time = { version = "=0.3.45", features = ["formatting", "parsing"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
fastembed = { version = "=5.8.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-load-dynamic"] }
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
paddle-ocr-rs = { version = "0.6.1", default-features = false }
image = "0.25"
tar = "0.4"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
# Work around cargo-expand failures on macOS/aarch64 during FRB generation
# caused by zune-jpeg's neon default feature on current toolchain.
zune-jpeg = { path = "../third_party/zune-jpeg-patched" }
# Work around cargo-expand failures on stable Rust (1.85) caused by a
# let-chain expression in paddle-ocr-rs.
paddle-ocr-rs = { path = "../third_party/paddle-ocr-rs-patched" }
